fixed collapse navbar issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,20 +16,24 @@
     font-family: 'Oleo Script Swash Caps', cursive;
 }
 
-.navbar-nav a {
+.navbar-nav .nav-link {
     font-size: 1.5rem;
     cursor: pointer;
 }
-.navbar-nav a:hover {
+.navbar-nav .nav-link:hover {
     color: var(--primary-color);
     text-decoration: underline;
 }
 
-.button a {
+.button i {
     font-size: 1.2rem;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 5px;
 }
-.button a:hover {
-    color: var(--primary-color);
+
+.button i:hover {
+    background-color: var(--primary-color);
 }
 
 /* Home Styles */
@@ -43,7 +47,7 @@
 
 .home .card-text {
     font-family: 'Dancing Script', cursive;
-}
+} 
 
 /* About Styles */
 #about img {
@@ -135,6 +139,9 @@
 @media only screen and (min-width: 316px) and (max-width:480px) {
     .navbar-brand {
         font-size: 1rem;
+    }
+    .button i {
+        font-size: 0.9rem;
     }
     
     /* Home Styles */
